list-post-trans

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -211,8 +211,77 @@
     "luxury_payment_confirmation": "بعد استلام العنصر من المشتري/المشتريّة، سيتم تحويل الدفع إلى حسابك خلال 24 ساعة",
     "luxury_return_policy": "سياسة الإرجاع لمنتجات فئة شوب<span class=\"color\">إن</span> LUXURY:",
     "luxury_authentication_policy": "تتمسك شوب<span class=\"color\">إن</span> بسياسة صارمة ضد المنتجات المقلدة. إذا استلمنا منتجات مزيفة أو عناصر معيبة أو نسخ غير قانونية (مستنسخة أو مصنعة بشكل غير قانوني) أو أي منتج ينتهك حقوق الملكية الفكرية، سيتصل فريقنا بالبائع عبر البريد الإلكتروني أو الهاتف لإبلاغه بإرجاع العنصر، مع تقديم أدلة قاطعة على التزوير، وسيتم إلغاء الطلب. سيتم إزالة العنصر بشكل دائم من كتالوج شوب<span class=\"color\">إن</span>. سيتم تحميل البائع / البائعة تكاليف العودة والتوثيق التي تبلغ 120 درهمًا. سيتم تسجيل معلومات البائع / البائعة ومنعه من بيع المنتجات المقلدة مستقبلاً. لتجنب أي إزعاج، يجب على البائع تقديم مستندات أصلية وغير معدلة مثل شهادة التوثيق، الفاتورة أو علامة السعر. يتم تشجيع المشتريات على قراءة الوصف الكامل للعنصر بعناية وطلب في قسم التعليقات إذا كان العنصر أصليًا أم نسخة.",
-     "Mode voyage": "وضع السفر"
-
+     "Mode voyage": "وضع السفر",
+     "keyword": "الكلمة المفتاحية",
+     "status": "الحالة",
+     "validation": "قيد التحقق",
+     "vente": "قيد البيع",
+     "vendu": "تم البيع",
+     "livraison": "قيد التوصيل",
+     "livré": "تم التوصيل",
+     "refusé": "مرفوض",
+     "préparation": "قيد التحضير",
+     "en voyage": "في الرحلة",
+     "en cours de livraison": "جارٍ التوصيل",
+     "ramassée": "تم الاستلام",
+     "retourné": "تم الإرجاع",
+     "month": "الشهر",
+     "january": "يناير",
+     "february": "فبراير",
+     "march": "مارس",
+     "april": "أبريل",
+     "may": "مايو",
+     "june": "يونيو",
+     "july": "يوليو",
+     "august": "أغسطس",
+     "september": "سبتمبر",
+     "october": "أكتوبر",
+     "november": "نوفمبر",
+     "december": "ديسمبر",
+     "year": "السنة",
+    "filter": "تصفية",
+    "article": "المنتج",
+    "discount_price": "السعر بعد التخفيض",
+    "base_price": "السعر الأساسي",
+    "last_price_update": "آخر تعديل للسعر",
+    "remaining_time_to_update": "الوقت المتبقي للتعديل الجديد",
+    "ad_status": "حالة الإعلان",
+    "deletion_reason": "سبب الحذف من قبل شوبإن",
+    "deleted_by_shopin": "تم الحذف من قبل شوبإن",
+    "no_items_found": "لم يتم العثور على أي عنصر وفقًا لمعايير البحث هذه.",
+    "reduce_price": "خفض السعر",
+  "current_price": "السعر الحالي",
+  "shopin_percentage": "نسبة شوب<span class=\"color\">إن</span>",
+  "ad": "الإعلان:",
+  "new_reduced_price": "السعر الجديد بعد التخفيض:",
+  "less_than_price": "أقل من",
+  "save_changes": "حفظ التغييرات",
+  "modification_blocked_title": "لا يمكنك تعديل هذا الإعلان",
+  "modification_blocked_message": "لأنه تم تعديله قبل أقل من أسبوع.",
+  "time_remaining_to_edit": "الوقت المتبقي قبل التعديل:",
+  "ad_not_found": "الإعلان غير موجود / أبلغ عنه!",
+  "price_reduction_success": "تم قبول السعر الجديد :price درهم. <br/> يمكنك تخفيض سعر هذا المنتج مرة أخرى خلال :countdown",
+  "voyage_mode": "وضع السفر",
+  "on_sale1": "قيد البيع",
+  "sold": "تم البيع",
+  "waiting_validation": "في انتظار التحقق",
+  "in_delivery": "قيد التوصيل",
+  "delivered": "تم التوصيل",
+  "refused": "مرفوض",
+  "preparation": "قيد التحضير",
+  "in_progress_delivery": "قيد التوصيل",
+  "picked_up": "تم الاستلام",
+  "returned": "تم الإرجاع",
+  "unknown_status": "حالة غير معروفة",
+  "at": "في",
+  "delete_post_title": "هل تريد الحذف؟",
+  "delete_post_text": "لن تتمكن من التراجع عن هذا!",
+  "delete_post_confirm": "نعم، حذف",
+  "delete_post_cancel": "إلغاء",
+  "delete_post_success_title": "تم الحذف!",
+  "delete_post_success_text": "تم حذف إعلانك",
+  "delete_post_error_title": "خطأ!",
+  "delete_post_error_text": "حدث خطأ ما"
 
 
 }
