--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -202,7 +202,81 @@
     "luxury_payment_confirmation": "After the item is received by the buyer, your payment will be credited to your account within 24 hours",
     "luxury_return_policy": "Return policy for SHOP<span class=\"color\">IN</span> LUXURY items:",
     "luxury_authentication_policy": "SHOP<span class=\"color\">IN</span> maintains a strict policy against counterfeits. If counterfeit products, defective items, illicit duplicates (copied, reproduced, or manufactured illegally), or items violating intellectual property rights are received, our team will contact the seller by email or phone to inform them of the return of the item, providing conclusive evidence of the counterfeit, and the order will be canceled. The item will be permanently removed from the SHOP<span class=\"color\">IN</span> catalog. Return and authentication fees of 120 dirhams will be charged to the seller. The seller's information will be recorded, prohibiting them from selling counterfeit products in the future. To avoid inconvenience, the seller must provide authentic and unchanged documents such as the certificate of authenticity, invoice, or price tag. Buyers are encouraged to carefully read the full description of the item and inquire in the comments section if the item is authentic or a replica.",
-    "Mode voyage": "Travel mode"
+    "Mode voyage": "Travel mode",
+    "keyword": "Keyword",
+    "status": "Status",
+  "validation": "Pending validation",
+  "vente": "On sale",
+  "vendu": "Sold",
+  "livraison": "Being delivered",
+  "livré": "Delivered",
+  "refusé": "Refused",
+  "préparation": "In preparation",
+  "en voyage": "In transit",
+  "en cours de livraison": "Out for delivery",
+  "ramassée": "Picked up",
+  "retourné": "Returned",
+  "month": "Month",
+  "january": "January",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December",
+  "year": "Year",
+  "filter": "Filter",
+
+    "article": "Item",
+    "discount_price": "Price after discount",
+    "base_price": "Base price",
+    "last_price_update": "Last price update",
+    "remaining_time_to_update": "Remaining time for a new update",
+    "ad_status": "Ad status",
+    "deletion_reason": "Reason for deletion by SHOPIN",
+    "deleted_by_shopin": "Deleted by Shopin",
+    "no_items_found": "No items found for these search criteria.",
+    "reduce_price": "Reduce Price",
+  "current_price": "Current price",
+  "shopin_percentage": "<b class=\"color\">Shopin</b> percentage",
+  "ad": "Ad:",
+  "new_reduced_price": "New reduced price:",
+  "less_than_price": "Less than",
+  "save_changes": "Save changes",
+  "modification_blocked_title": "You cannot modify this ad",
+  "modification_blocked_message": "because it was changed less than a week ago.",
+  "time_remaining_to_edit": "Time remaining before you can modify:",
+  "ad_not_found": "Ad not found / Report!",
+  "price_reduction_success": "The new price of :price DH has been accepted. <br/> You will be able to reduce the price of this item again in :countdown",
+"voyage_mode": "In voyage mode",
+  "on_sale1": "On sale",
+  "sold": "Sold",
+  "waiting_validation": "Waiting for validation",
+  "in_delivery": "In delivery",
+  "delivered": "Delivered",
+  "refused": "Refused",
+  "preparation": "In preparation",
+  "in_progress_delivery": "In progress delivery",
+  "picked_up": "Picked up",
+  "returned": "Returned",
+  "unknown_status": "Unknown status",
+   "at": "at",
+   "delete_post_title": "Do you want to delete?",
+  "delete_post_text": "You won't be able to revert this!",
+  "delete_post_confirm": "Yes, delete",
+  "delete_post_cancel": "Cancel",
+  "delete_post_success_title": "Deleted!",
+  "delete_post_success_text": "Your ad has been deleted",
+  "delete_post_error_title": "Error!",
+  "delete_post_error_text": "An error occurred"
+
+
+
 
   }
 
