--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -203,8 +203,78 @@
     "luxury_payment_confirmation": "Après la réception de l’article par l’acheteur / l’acheteuse, votre paiement sera versé dans votre compte après 24 heures",
     "luxury_return_policy": "Politique de retour des articles de la catégorie SHOP<span class=\"color\">IN</span> LUXURY :",
     "luxury_authentication_policy": "SHOP<span class=\"color\">IN</span> maintient une politique de rigueur envers les contrefaçons. Si par hasard nous recevons des produits falsifiés, des articles défectueux, des duplicatas illicites (copiés, reproduits ou manufacturés de manière illégale) ou tout article enfreignant les droits de propriété intellectuelle, notre équipe contactera la vendeuse par mail ou téléphone, pour l’informer du retour de l’article en lui présentant des preuves concluantes de la contrefaçon et la commande sera résiliée, et l'article sera éradiqué de façon permanente du catalogue de SHOP<span class=\"color\">IN</span>. Les frais de retour et d'authentification, totalisant 120 dirhams, seront à la charge du vendeur/euse. Nous consignons les informations du vendeur/euse, lui interdisant toute nouvelle vente de produits contrefaits. Pour éviter tout inconvénient, la vendeuse doit soumettre des documents authentiques et inchangés tels que le certificat d'authenticité, la facture ou l'étiquette de prix. Les acheteuses sont encouragées à lire attentivement la description complète de l'article et à demander dans la section des commentaires si l’article est authentique ou une réplique.",
-    "Mode voyage": "Mode voyage"
+    "Mode voyage": "Mode voyage",
+    "keyword": "Mot clé",
+    "status": "Statut",
+  "validation": "En validation",
+  "vente": "En cours de vente",
+  "vendu": "Vendu",
+  "livraison": "En cours de livraison",
+  "livré": "Déjà livré",
+  "refusé": "Refusé",
+  "préparation": "En préparation",
+  "en voyage": "En voyage",
+  "en cours de livraison": "En cours de livraison",
+  "ramassée": "Ramassée",
+  "retourné": "Retourné",
+  "month": "Mois",
+  "january": "Janvier",
+  "february": "Février",
+  "march": "Mars",
+  "april": "Avril",
+  "may": "Mai",
+  "june": "Juin",
+  "july": "Juillet",
+  "august": "Août",
+  "september": "Septembre",
+  "october": "Octobre",
+  "november": "Novembre",
+  "december": "Décembre",
+  "year": "Année",
+  "filter": "Filtrer",
 
+    "article": "Article",
+    "discount_price": "Prix après réduction",
+    "base_price": "Prix de base",
+    "last_price_update": "Dernière modification de prix",
+    "remaining_time_to_update": "Temps restant pour une nouvelle modification",
+    "ad_status": "Statut de l'annonce",
+    "deletion_reason": "Raison de suppression par SHOPIN",
+    "deleted_by_shopin": "Supprimée par Shopin",
+    "no_items_found": "Aucun article trouvé pour ces critères de recherche.",
+    "reduce_price": "Réduire le prix",
+  "current_price": "Prix actuel",
+  "shopin_percentage": "Pourcentage de <b class=\"color\">Shopin</b>",
+  "ad": "Annonce :",
+  "new_reduced_price": "Nouveau prix réduis :",
+  "less_than_price": "Moins que",
+  "save_changes": "Enregistrer le changement",
+  "modification_blocked_title": "Vous ne pouvez pas modifier cette annonce",
+  "modification_blocked_message": "car elle a été modifiée il y a moins d'une semaine.",
+  "time_remaining_to_edit": "Temps restant avant de pouvoir modifier :",
+  "ad_not_found": "Annonce introuvable / Signaler !",
+  "price_reduction_success": "Le nouveau prix de :price DH est accpeté. <br/> Vous pourrez réduire le prix de cet article de nouveau dans :countdown",
+  "voyage_mode": "En mode voyage",
+  "on_sale1": "En vente",
+  "sold": "Vendu",
+  "waiting_validation": "En attente de validation",
+  "in_delivery": "En livraison",
+  "delivered": "Livré",
+  "refused": "Refusé",
+  "preparation": "Préparation",
+  "in_progress_delivery": "En cours de livraison",
+  "picked_up": "Ramassée",
+  "returned": "Retourné",
+  "unknown_status": "Statut inconnu",
+  "at": "à",
+  "delete_post_title": "Voulez-vous supprimer ?",
+  "delete_post_text": "Vous ne pourrez pas revenir en arrière !",
+  "delete_post_confirm": "Oui, supprimer",
+  "delete_post_cancel": "Annuler",
+  "delete_post_success_title": "Supprimé !",
+  "delete_post_success_text": "Votre annonce a été supprimé",
+  "delete_post_error_title": "Erreur !",
+  "delete_post_error_text": "Une erreur est survenue"
 
 
 }
