--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -288,7 +288,16 @@
   "total": "TOTAL",
   "validate_cart": "Valider mon panier",
   "validating": "Validation....",
-  "enter_region": "Veuillez entrer votre région <a href='/informations'>ici</a> pour continuer votre commande."
+  "enter_region": "Veuillez entrer votre région <a href='/informations'>ici</a> pour continuer votre commande.",
+  "categories": "Catégories",
+  "price": "Prix",
+  "popularity": "Popularité",
+  "like_singular": "j'aime",
+  "like_plural": "j'aimes",
+  "available": "Disponible",
+  "unavailable": "Indisponible",
+  "remove": "Rétirer",
+  "no_favorites_yet": "Vous n'avez pas encore aimé d'annonce !"
 
 
 
