--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -297,7 +297,14 @@
   "available": "Disponible",
   "unavailable": "Indisponible",
   "remove": "Rétirer",
-  "no_favorites_yet": "Vous n'avez pas encore aimé d'annonce !"
+  "no_favorites_yet": "Vous n'avez pas encore aimé d'annonce !",
+  "results": "Résultats",
+  "article_status": "Statut de l’article",
+  "added_on": "Ajouté le",
+  "no_favorites": "Vous n'avez pas encore de favoris !",
+  "favorite_removed": "Article retiré de mes favoris !",
+  "favorite_added": "Article ajouté aux favoris !"
+
 
 
 
