--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -303,7 +303,13 @@
   "added_on": "Ajouté le",
   "no_favorites": "Vous n'avez pas encore de favoris !",
   "favorite_removed": "Article retiré de mes favoris !",
-  "favorite_added": "Article ajouté aux favoris !"
+  "favorite_added": "Article ajouté aux favoris !",
+  "remove_all": "Tout supprimer",
+  "notifications.new_order_title": "Une nouvelle commande !",
+  "notifications.new_order_message": ":salutation :seller, votre article <a href=':post_url' class='underlined-link'>:post_title</a> a été commandé par :buyer. Veuillez préparer l'article pour l'expédition. Un livreur de notre partenaire logistique vous contactera bientôt et passera pour récupérer l'article.<br>Merci de bien vouloir <a href=':bank_info_url' class='underlined-link'>cliquer ici</a> pour confirmer ou mettre à jour vos informations bancaires (RIB), afin que nous puissions vous transférer les fonds lorsque le processus de vente sera finalisé.",
+  "notifications.salutation_male": "Cher",
+  "notifications.salutation_female": "Chère",
+  "Shopiners": "Shopiners"
 
 
 
