--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -310,6 +310,12 @@
   "added_on": "تمت الإضافة في",
   "no_favorites": "ليس لديك أي مفضلات بعد!",
   "favorite_removed": "تمت إزالة المنتج من المفضلة!",
-  "favorite_added": "تمت إضافة العنصر إلى المفضلة!"
+  "favorite_added": "تمت إضافة العنصر إلى المفضلة!",
+  "remove_all": "حذف الكل",
+  "notifications.new_order_title": "طلب جديد!",
+  "notifications.new_order_message": ":salutation :seller، تم طلب منتجك <a href=':post_url' class='underlined-link'>:post_title</a> من قبل :buyer. يرجى تحضير المنتج للشحن. سيتواصل معك أحد مندوبي الشحن التابعين لنا قريبًا لاستلام المنتج.<br>يرجى <a href=':bank_info_url' class='underlined-link'>النقر هنا</a> لتأكيد أو تحديث معلوماتك البنكية (RIB)، حتى نتمكن من تحويل الأموال لك عند اكتمال عملية البيع.",
+  "notifications.salutation_male": "عزيزي",
+  "notifications.salutation_female": "عزيزتي",
+  "Shopiners": "شوبينرز"
 
 }
