--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -308,11 +308,14 @@
   "notifications.new_order_message": ":salutation :seller, your item <a href=':post_url' class='underlined-link'>:post_title</a> has been ordered by :buyer. Please prepare the item for shipping. A courier from our logistics partner will contact you soon and pick up the item.<br>Thank you for <a href=':bank_info_url' class='underlined-link'>clicking here</a> to confirm or update your bank details (RIB), so we can transfer the funds when the sale process is complete.",
   "notifications.salutation_male": "Dear",
   "notifications.salutation_female": "Dear",
-  "Shopiners": "Shopiners"
-
-
-
-
+  "Shopiners": "Shopiners",
+  "message.ad_disliked": "Ad disliked",
+  "message.ad_liked": "Ad liked",
+  "about.shopin": "About SHOP<span class='color'>IN</span>",
+  "welcome.shopin": "Welcome to the world of SHOP<span class='color'>IN</span>, the platform that transforms your buying and selling habits. Here, every item tells a story, and each transaction becomes an opportunity to be part of a responsible and trendy movement.",
+  "why.shopin": "Why choose SHOP<span class='color'>IN</span>? Because we are not just an online marketplace — we are a community that values your needs, your desires, and your impact. Explore a wide selection of new and second-hand items, discover hidden gems, and easily sell your own goods.",
+  "join.shopin": "By joining SHOP<span class='color'>IN</span>, you embrace a smarter and more sustainable way of consuming. You help reduce waste while discovering unique treasures that reflect your style and values.",
+  "call.to.action": "Don’t let your unused items collect dust — turn them into income. And for bargain hunters, your next favorite find is already waiting for you on SHOP<span class='color'>IN</span>. Join us today and become a SHOP<span class='color'>IN</span>ER — a part of a positive, practical, and rewarding change!"
 
   }
 
