--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -301,15 +301,26 @@
   "results": "Résultats",
   "article_status": "Statut de l’article",
   "added_on": "Ajouté le",
-  "no_favorites": "Vous n'avez pas encore de favoris !",
-  "favorite_removed": "Article retiré de mes favoris !",
-  "favorite_added": "Article ajouté aux favoris !",
+  "no_favorites": "Vous n'avez pas encore de favoris",
+  "favorite_removed": "Article retiré de mes favoris",
+  "favorite_added": "Article ajouté aux favoris",
   "remove_all": "Tout supprimer",
   "notifications.new_order_title": "Une nouvelle commande !",
   "notifications.new_order_message": ":salutation :seller, votre article <a href=':post_url' class='underlined-link'>:post_title</a> a été commandé par :buyer. Veuillez préparer l'article pour l'expédition. Un livreur de notre partenaire logistique vous contactera bientôt et passera pour récupérer l'article.<br>Merci de bien vouloir <a href=':bank_info_url' class='underlined-link'>cliquer ici</a> pour confirmer ou mettre à jour vos informations bancaires (RIB), afin que nous puissions vous transférer les fonds lorsque le processus de vente sera finalisé.",
   "notifications.salutation_male": "Cher",
   "notifications.salutation_female": "Chère",
-  "Shopiners": "Shopiners"
+  "Shopiners": "Shopiners",
+  "message.ad_disliked": "Annonce dislikée",
+  "message.ad_liked": "Annonce likée",
+  "about.shopin": "À propos de SHOP<span class='color'>IN</span>",
+  "welcome.shopin": "Bienvenue dans l’univers de SHOP<span class='color'>IN</span>, la plateforme qui transforme vos habitudes d'achat et de vente. Ici, chaque article raconte une histoire, et chaque transaction devient une opportunité de faire partie d’un mouvement responsable et tendance.",
+  "why.shopin": "Pourquoi choisir SHOP<span class='color'>IN</span>? Parce que nous ne sommes pas juste un marché en ligne : nous sommes une communauté qui valorise vos besoins, vos envies et votre impact. Explorez une sélection variée d’articles neufs et d’occasion, trouvez des pépites rares et vendez vos propres objets en toute simplicité.",
+  "join.shopin": "En rejoignant SHOP<span class='color'>IN</span> vous adoptez un mode de consommation plus intelligent et durable. Vous contribuez à réduire le gaspillage tout en découvrant des trésors uniques qui reflètent votre style et vos valeurs.",
+  "call.to.action": "Ne laissez pas vos objets inutilisés dormir chez vous – transformez-les en revenus. Et pour les chasseurs de bonnes affaires, votre prochaine trouvaille coup de cœur vous attend déjà sur SHOP<span class='color'>IN</span>. Rejoignez-nous dès aujourd’hui et devenez un SHOP<span class='color'>IN</span>ER, acteur d’un changement positif, pratique et enrichissant !"
+
+
+
+
 
 
 
