--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -323,7 +323,10 @@
   "welcome.shopin": "مرحبًا بك في عالم شوب<span class=\"color\">إن</span>، المنصة التي تُغير عاداتك في الشراء والبيع. هنا، كل عنصر يروي قصة، وكل عملية شراء تُعد فرصة للمشاركة في حركة عصرية ومسؤولة.",
   "why.shopin": "لماذا تختار شوب<span class=\"color\">إن</span>؟ لأننا لسنا مجرد سوق إلكتروني، بل نحن مجتمع يقدّر احتياجاتك، ورغباتك، وتأثيرك. استكشف مجموعة متنوعة من المنتجات الجديدة والمستعملة، واكتشف قطعًا نادرة، وبِع أغراضك بكل سهولة.",
   "join.shopin": "بانضمامك إلى شوب<span class=\"color\">إن</span>، فإنك تتبنى أسلوب استهلاك أذكى وأكثر استدامة. تساهم في تقليل الهدر مع اكتشاف كنوز فريدة تعبّر عن ذوقك وقيمك.",
-  "call.to.action": "لا تترك أغراضك غير المستعملة مكدسة في منزلك — حوّلها إلى دخل. وللباحثين عن الصفقات الرائعة، اكتشافك المفضل التالي ينتظرك بالفعل على شوب<span class=\"color\">إن</span>. انضم إلينا اليوم وكن <span class='color'>شوبينر</span>، وكن جزءًا من تغيير إيجابي وعملي ومفيد!"
+  "call.to.action": "لا تترك أغراضك غير المستعملة مكدسة في منزلك — حوّلها إلى دخل. وللباحثين عن الصفقات الرائعة، اكتشافك المفضل التالي ينتظرك بالفعل على شوب<span class=\"color\">إن</span>. انضم إلينا اليوم وكن <span class='color'>شوبينر</span>، وكن جزءًا من تغيير إيجابي وعملي ومفيد!",
+  "Panier": "عربة التسوق",
+  "Adresse de livraison": "عنوان التوصيل",
+  "Paiement": "الدفع"
 
 
 
