--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -315,8 +315,10 @@
   "welcome.shopin": "Welcome to the world of SHOP<span class='color'>IN</span>, the platform that transforms your buying and selling habits. Here, every item tells a story, and each transaction becomes an opportunity to be part of a responsible and trendy movement.",
   "why.shopin": "Why choose SHOP<span class='color'>IN</span>? Because we are not just an online marketplace — we are a community that values your needs, your desires, and your impact. Explore a wide selection of new and second-hand items, discover hidden gems, and easily sell your own goods.",
   "join.shopin": "By joining SHOP<span class='color'>IN</span>, you embrace a smarter and more sustainable way of consuming. You help reduce waste while discovering unique treasures that reflect your style and values.",
-  "call.to.action": "Don’t let your unused items collect dust — turn them into income. And for bargain hunters, your next favorite find is already waiting for you on SHOP<span class='color'>IN</span>. Join us today and become a SHOP<span class='color'>IN</span>ER — a part of a positive, practical, and rewarding change!"
-
+  "call.to.action": "Don’t let your unused items collect dust — turn them into income. And for bargain hunters, your next favorite find is already waiting for you on SHOP<span class='color'>IN</span>. Join us today and become a SHOP<span class='color'>IN</span>ER — a part of a positive, practical, and rewarding change!",
+  "Panier": "Cart",
+    "Adresse de livraison": "Delivery Address",
+    "Paiement": "Payment"
   }
 
 
