--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -316,11 +316,11 @@
   "welcome.shopin": "Bienvenue dans l’univers de SHOP<span class='color'>IN</span>, la plateforme qui transforme vos habitudes d'achat et de vente. Ici, chaque article raconte une histoire, et chaque transaction devient une opportunité de faire partie d’un mouvement responsable et tendance.",
   "why.shopin": "Pourquoi choisir SHOP<span class='color'>IN</span>? Parce que nous ne sommes pas juste un marché en ligne : nous sommes une communauté qui valorise vos besoins, vos envies et votre impact. Explorez une sélection variée d’articles neufs et d’occasion, trouvez des pépites rares et vendez vos propres objets en toute simplicité.",
   "join.shopin": "En rejoignant SHOP<span class='color'>IN</span> vous adoptez un mode de consommation plus intelligent et durable. Vous contribuez à réduire le gaspillage tout en découvrant des trésors uniques qui reflètent votre style et vos valeurs.",
-  "call.to.action": "Ne laissez pas vos objets inutilisés dormir chez vous – transformez-les en revenus. Et pour les chasseurs de bonnes affaires, votre prochaine trouvaille coup de cœur vous attend déjà sur SHOP<span class='color'>IN</span>. Rejoignez-nous dès aujourd’hui et devenez un SHOP<span class='color'>IN</span>ER, acteur d’un changement positif, pratique et enrichissant !"
+  "call.to.action": "Ne laissez pas vos objets inutilisés dormir chez vous – transformez-les en revenus. Et pour les chasseurs de bonnes affaires, votre prochaine trouvaille coup de cœur vous attend déjà sur SHOP<span class='color'>IN</span>. Rejoignez-nous dès aujourd’hui et devenez un SHOP<span class='color'>IN</span>ER, acteur d’un changement positif, pratique et enrichissant !",
 
-
-
-
+  "Panier": "Panier",
+    "Adresse de livraison": "Adresse de livraison",
+    "Paiement": "Paiement"
 
 
 
